WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
185140
WebProcess fails to launch
https://bugs.webkit.org/show_bug.cgi?id=185140
Summary
WebProcess fails to launch
Per Arne Vollan
Reported
2018-04-30 11:56:01 PDT
The macOS target version should be used to determine the runloop type.
Attachments
Patch
(1.74 KB, patch)
2018-04-30 11:59 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Patch
(1.68 KB, patch)
2018-05-01 10:37 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(12.74 MB, application/zip)
2018-05-01 12:14 PDT
,
EWS Watchlist
no flags
Details
Patch
(2.00 KB, patch)
2018-05-18 12:26 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2018-04-30 11:56:29 PDT
<
rdar://problem/39585037
>
Per Arne Vollan
Comment 2
2018-04-30 11:59:52 PDT
Created
attachment 339133
[details]
Patch
Brent Fulgham
Comment 3
2018-04-30 16:58:06 PDT
Comment on
attachment 339133
[details]
Patch Looks good. r=me.
Per Arne Vollan
Comment 4
2018-04-30 18:54:19 PDT
Comment on
attachment 339133
[details]
Patch Thanks for reviewing!
WebKit Commit Bot
Comment 5
2018-04-30 19:22:08 PDT
Comment on
attachment 339133
[details]
Patch Clearing flags on attachment: 339133 Committed
r231192
: <
https://trac.webkit.org/changeset/231192
>
WebKit Commit Bot
Comment 6
2018-04-30 19:22:09 PDT
All reviewed patches have been landed. Closing bug.
mitz
Comment 7
2018-04-30 19:25:37 PDT
Comment on
attachment 339133
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=339133&action=review
> Source/WebKit/Configurations/WebContentService.xcconfig:64 > +RUNLOOP_TYPE = $(RUNLOOP_TYPE_$(PLATFORM_NAME)_$(TARGET_MAC_OS_X_VERSION_MAJOR));
We avoid using TARGET_MAC_OS_X_VERSION_MAJOR like this because it’s not future-proof. Please use the WK_MACOS_* machinery defined in WebKitTargetConditionals.xcconfig as described in the comments there.
Per Arne Vollan
Comment 8
2018-05-01 10:37:31 PDT
Reopening to attach new patch.
Per Arne Vollan
Comment 9
2018-05-01 10:37:32 PDT
Created
attachment 339204
[details]
Patch
Per Arne Vollan
Comment 10
2018-05-01 10:52:49 PDT
(In reply to mitz from
comment #7
)
> Comment on
attachment 339133
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=339133&action=review
> > > Source/WebKit/Configurations/WebContentService.xcconfig:64 > > +RUNLOOP_TYPE = $(RUNLOOP_TYPE_$(PLATFORM_NAME)_$(TARGET_MAC_OS_X_VERSION_MAJOR)); > > We avoid using TARGET_MAC_OS_X_VERSION_MAJOR like this because it’s not > future-proof. Please use the WK_MACOS_* machinery defined in > WebKitTargetConditionals.xcconfig as described in the comments there.
Thanks! I have updated the patch.
Brent Fulgham
Comment 11
2018-05-01 11:11:31 PDT
Comment on
attachment 339204
[details]
Patch Very cool! r=me
EWS Watchlist
Comment 12
2018-05-01 12:14:13 PDT
Comment on
attachment 339204
[details]
Patch
Attachment 339204
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/7526510
New failing tests: http/tests/security/canvas-remote-read-remote-video-blocked-no-crossorigin.html fast/dom/URL-attribute-reflection.html http/tests/security/contentSecurityPolicy/video-with-https-url-allowed-by-csp-media-src-star.html
EWS Watchlist
Comment 13
2018-05-01 12:14:24 PDT
Created
attachment 339213
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
WebKit Commit Bot
Comment 14
2018-05-01 12:57:22 PDT
Comment on
attachment 339204
[details]
Patch Clearing flags on attachment: 339204 Committed
r231205
: <
https://trac.webkit.org/changeset/231205
>
WebKit Commit Bot
Comment 15
2018-05-01 12:57:24 PDT
All reviewed patches have been landed. Closing bug.
Per Arne Vollan
Comment 16
2018-05-18 12:21:15 PDT
This is still a problem.
Per Arne Vollan
Comment 17
2018-05-18 12:26:40 PDT
Created
attachment 340727
[details]
Patch
Geoffrey Garen
Comment 18
2018-05-18 13:14:50 PDT
Comment on
attachment 340727
[details]
Patch r=me Can we test this -- or is it observable in an existing crash?
WebKit Commit Bot
Comment 19
2018-05-18 15:28:13 PDT
Comment on
attachment 340727
[details]
Patch Clearing flags on attachment: 340727 Committed
r231984
: <
https://trac.webkit.org/changeset/231984
>
WebKit Commit Bot
Comment 20
2018-05-18 15:28:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug