WebProcess fails to launch https://bugs.webkit.org/show_bug.cgi?id=185140

Reviewed by Geoffrey Garen.

If the NSApplication runloop is not used in the WebContent process, launchServicesCheckIn() needs to be called
in order for enableSandboxStyleFileQuarantine() to succeed. Determine at runtime if launchServicesCheckIn()
should be called by checking if the NSApplication event loop is running.

* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeProcess):


Canonical link: https://commits.webkit.org/201252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231984 268f45cc-cd09-0410-ab3c-d52691b4dbfc